﻿v1.3.3

LibSBuff
* New: This system will now output a warning to Chat if a single call to Inspect.Buff.Detail takes longer than 0.045 seconds.
* New: The update cycle will enable Watchdog.Quiet whenever the player is out of combat.
* New: Buff Add calls will also enable Watchdog.Quiet whenever the player is out of combat.
* Change: Reduced the time before Buff caching will break from the main loop for both cycling and addtions.

Translations
* French
** Fixed: Adjusted Phase 2 transition trigger to include escape code (%) for hyphen.
* Taiwanese
** New: Added Dictionary support.
* Chinese
** New: Added Dictionary support.

----
v1.3.2

LibSBuff
* Change: Full Buff list calls on units changing to Availability. Full are now forced in to a post cache mode.
* Change: BuffUpdate no longer calls BuffAdd for full Buff lists. This Method will now queue the entire Buff list for processing.
* Fixed: Corrected BuffUpdate not checking against the correct active Buff Cache.
* Fixed: Corrected BuffClear not checking against the correct active Buff Cache.

Ready Check Available Tracking
* New: Added Razor Edge.

RezMaster
* Fixed: Scaling Rez Master with active timers should no longer throw errors.

Tank-Swap
* New: An option is available to only show Tank-Swap if you are Tanking.

Menus
* Fixed: Scrollable views will now clamp to the last item in the list, rather than add additional empty space.
* Fixed: List views will now align themselves with the scrollbar position after collapsing and expanding Menu items.
* Fixed: Collapsing a Menu item which then disables the Scrollbar will reset the view so all items are visible.
* Fixed: Introduced a check to ensure new Scrollbar positions fall within the excepted range.

Infernal Dawn
* Rusila Dreadblade
** New: Added Barbed Chains timer.
** New: Added Fists timer.
** Fixed: Left and Right Dreadshot death messages are now correctly linked to their options.

Translations
* French addition for Laethys Tank-Swap.